Issue #SB-4449 fix: Limited Content : When limited content opens via shared URL, gui glitch visible

--- a/src/app/client/src/styles.css
+++ b/src/app/client/src/styles.css
@@ -1144,7 +1144,6 @@ i.large.icon.limitedPublishingLinkIcon {
   max-height: 40px;
   width: auto;
   height: auto;
-  position: absolute;
 }
 
 .blue-text-color-sunbird {
